# auto-surgery

./: .dockerignore  .env.sofa  .gitignore  ML_COMPONENTS.mmd  README.md  ROLLOUT.md  pyproject.toml
.cursor/agents/: coding-worker.md  model-trainer.md  quality-reviewer.md  repair-worker.md  robot-interface-tester.md  safety-verifier.md  senior-reasoning.md  senior-repair.md  simple-worker.md  sofa-sim-operator.md  worker.md
.cursor/rules/: coding-standards.mdc  external-references.mdc  graphiti-logging.mdc  subagent-driven-workflow.mdc
.github/workflows/: ci.yml
assets/forceps/: dejavu_default.yaml  shaft_tip_collision.obj.sha256
configs/motion/: default.yaml
configs/randomization/: aggressive.yaml  default.yaml  minimal.yaml  no_camera_perturb.yaml
configs/scenes/: dejavu_brain.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_CONDENSED.md  ARCHITECTURE_THESIS.md  DATA_GOVERNANCE.md  ML_COMPONENTS.mmd  PARALLEL_ROLLOUTS.md  RISKS_AND_VALIDATION.md  SOFA_INSTALLATION.md  SOFA_REGISTRY_EXTENSION.md  TARGET_ROBOT_KUKA_KR6.md  TIME_SYNC.md  TRAINING_STRATEGY.md  UNITS.md
docs/research/: bound-forceps-motion-visual-smoke.md
docs/specs/: 2026-05-12-command-schema-and-env-step-contract-design.md  2026-05-12-domain-randomization-framework-design.md  2026-05-12-physical-forceps-design.md  2026-05-12-scene-aware-motion-generator-design.md
infra/docker/: Dockerfile.train  README.md
infra/sofa/: batch-capture-brain-forceps-video.sh  setup_sofa_conda.sh  with-sofa.sh
reference_kuka/: README.MD  kuka.rs  sdk.rs
scripts/: prep_forceps_collision_meshes.py
(+159 files in other folders)
