[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-surgery"
version = "0.1.0"
description = "Phase 0 infrastructure for autonomous neurosurgery stack (schemas, env, logging, training scaffolding)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Neuroarm" }]
dependencies = [
    "pydantic>=2.6,<3",
    "pyarrow>=15,<21",
    "fsspec>=2024.1",
    "typer>=0.12,<1",
    "Pillow>=10,<11",
    "numpy>=1.26,<3",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
train = [
    "torch==2.7.0",
    "hydra-core>=1.3,<2",
    "mlflow>=2.14,<4",
]

[project.scripts]
auto-surgery = "auto_surgery.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "ruff>=0.8,<1",
    "pyright>=1.1,<2",
]
prep = [
    "trimesh>=4.4,<5",
    "PyYAML>=6.0,<7",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/auto_surgery/training/smoke.py" = ["BLE001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportPrivateImportUsage = false
venvPath = "."
venv = ".venv"
include = ["src", "tests"]

[tool.uv]
managed = false

